fix overflow issue with dharma-quiz item-boxes

--- a/dharma-quiz/src/css/dharma-quiz.scss
+++ b/dharma-quiz/src/css/dharma-quiz.scss
@@ -1,7 +1,3 @@
-#dharma-quiz {
-	min-height: 100vh;
-}
-
 header,
 footer {
 	text-align: center;
@@ -68,8 +64,7 @@ footer {
 }
 
 #dharma-quiz {
-	height: -webkit-fill-available;
-	// height: 100vh;
+	min-height: 100vh;
 	background-color: var(--mid-accent);
 	display: flex;
 	flex-direction: column;
@@ -113,7 +108,7 @@ footer {
 	}
 
 	#item-boxes {
-		min-height: 200px;
+		min-height: 300px;
 		background-color: white;
 		padding: 10px;
 		box-sizing: border-box;
@@ -123,7 +118,6 @@ footer {
 		justify-content: center;
 		flex: 1;
 		flex-wrap: wrap;
-		overflow: auto;
 
 		.item-box {
 			width: 165px;
@@ -220,16 +214,8 @@ footer {
 
 @media only screen and (max-width: 850px) {
 	#dharma-quiz {
-		height: auto;
-
 		#category-boxes {
 			display: inline-block !important;
-		}
-
-		#item-boxes {
-			flex: 0;
-			min-height: 300px;
-			max-height: 300px;
 		}
 	}
 }
